<resources>
    <string name="app_name">COMP2000CS</string>
    <string name="welcomeText">Welcome</string>
    <string name="login_asText">Login as:</string>
    <string name="please_login">Please login:</string>
    <string name="employeeButton">Employee</string>
    <string name="adminButton">Admin</string>
    <string name="helpText">Need help?</string>
    <string name="logoText">UnityHub</string>
    <string name="profile_image">Profile Image</string>
    <string name="login_title">Login to your account</string>
    <string name="emailInput">EMAIL</string>
    <string name="passwordInput">PASSWORD</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="login_button">LOGIN</string>
    <string name="backButton">Back</string>
    <string name="empText">Employee</string>
    <string name="employeeText">Employee</string>
    <string name="your_details">Your details</string>
    <string name="empHolidays">View booked holidays</string>
    <string name="empRequest">Request a holiday</string>
    <string name="emp_request">Request details</string>
    <string name="settings_image">Settings icon</string>
    <string name="notifs_image">Notification icon</string>
    <string name="profile_image_a4">Profile image</string>
    <string name="change_profile">Tap profile above to change picture</string>
    <string name="firstnameInput">First name</string>
    <string name="surnameInput">Surname</string>
    <string name="emailAdInput">Email</string>
    <string name="edit_details">Edit Details</string>
    <string name="first_name">First Name</string>
    <string name="personal_details_tab">Personal Details</string>
    <string name="about_you">About You</string>
    <string name="house_info">House Info</string>
    <string name="employee_info">Employee Info</string>
    <string name="main_profile">Your profile</string>
    <string name="temppencilicon">Pencil icon</string>
    <string name="booked_holidays_tab">Booked Holidays</string>
    <string name="remaining_days">Remaining leave days</string>
    <string name="accepted">Accepted</string>
    <string name="declined">Declined</string>
    <string name="pending">Pending</string>
    <string name="request_holidays_tab">Request Holiday</string>
    <string name="ok">OK</string>
    <string name="reasonDropdown">Reason</string>
    <string name="settings_tab">Settings</string>
    <string name="account">Account</string>
    <string name="edit_profile">Edit profile</string>
    <string name="privacy">Privacy</string>
    <string name="delete_account">Delete account</string>
    <string name="notifications">Notifications</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="push_notifications">Push notifications</string>
    <string name="notification_preferences">Notification Preferences</string>
    <string name="salary_updates">Salary updates</string>
    <string name="meetings">Meetings</string>
    <string name="permissions">Permissions</string>
    <string name="camera">Camera</string>
    <string name="location">Location</string>
    <string name="edit_notification_preferences">Edit notification preferences</string>
    <string name="notifications_switch_email">Email switch</string>
    <string name="notifications_switch_text">Text switch</string>
    <string name="logouticon">logout</string>
    <string name="greeting_text">Hi, %1$s</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="notifs">Notifications</string>
    <string name="adminText">Admin</string>
    <string name="admText">Admin</string>
    <string name="your_employees">Your employees</string>
    <string name="add_remove">Add/Remove an Employee</string>
    <string name="holiday_requests">Holiday Requests</string>
    <string name="view_name_requests">View name requests</string>
    <string name="your_employees_tab">Your Employees</string>
    <string name="add_remove_tab">Add/Remove An Employee</string>
    <string name="action_to_take">Which action would you like take?</string>
    <string name="add_an_employee">Add an employee</string>
    <string name="remove_employee">Remove an employee</string>
    <string name="add_employee_tab">Add Employee</string>
    <string name="edit_employee_tab">Edit Employee</string>
<string name="no_notifications_to_display">No notifications to display</string>
    <string name="remove_employee_tab">Remove Employee</string>
    <string name="holidays_request_tab">Holiday Requests</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="department">Department</string>
    <string name="salary">Salary</string>
    <string name="joiningdate">Joining date</string>
    <string name="leaves">Leaves</string>
    <string name="id">ID</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="api">API btn</string>
    <string name="employee_id">ID: %1$d</string>
    <string name="employee_name">Name: %1$s %2$s</string>
    <string name="employee_email">Email: %1$s</string>
    <string name="employee_department">Department: %1$s</string>
    <string name="employee_joining_date">Joining Date: %1$s</string>
    <string name="employee_leaves">Leaves: %1$d</string>
    <string name="employee_salary">Salary: $%1$.2f</string>
    <string name="save">Save</string>
    <string name="no_fields">No more fields</string>
    <string name="add_new_employee">Add new employee</string>
    <string name="add_employee">Add employee</string>
    <string name="employee_id_text">Employee ID</string>
    <string name="id_colon">ID:</string>
    <string name="firstname_colon">First name:</string>
    <string name="lastname_colon">Last Name:</string>
    <string name="name_colon">Name:</string>
    <string name="email_colon">Email:</string>
    <string name="department_colon">Department:</string>
    <string name="joining_date_colon">Joining Date:</string>
    <string name="leaves_colon">Leaves:</string>
    <string name="salary_colon">Salary:</string>
    <string name="enter_id">Enter ID</string>
    <string name="enter_employee_id">Enter employee ID</string>
    <string name="enter_employee_firstname">Enter first name</string>
    <string name="enter_employee_lastname">Enter last name</string>
    <string name="enter_employee_email">Enter email</string>
    <string name="enter_employee_department">Enter Department</string>
    <string name="enter_employee_joining_date">Enter Joining Date</string>
    <string name="enter_leaves_count">Enter leaves count</string>
    <string name="enter_employee_salary">Enter Salary</string>
    <string name="submit_changes">SUBMIT CHANGES</string>
    <string name="pending_requests">Pending Name Change Requests</string>
    <string name="new_name_placeholder">New Name: %1$s %2$s</string>
    <string name="new_name">New Name: </string>
    <string name="employee_email_text">Employee Email</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="start_date">Start Date (YYYY-MM-DD)</string>
    <string name="end_date">End Date (YYYY-MM-DD)</string>
    <string name="book_holiday">BOOK HOLIDAY</string>
    <string name="remaining_leave_days">Remaining leave days: 30</string>
    <string name="pending_leave_requests">Pending leave requests</string>
    <string name="status_pending">Status: Pending</string>
    <string name="dates">Dates: </string>
    <string name="days">Days: </string>
    <string name="leave_dates">Dates: YYYY-MM-DD to YYYY-MM-DD</string>
    <string name="total_days">Total Days: 5</string>
    <string name="view_booked_holidays">View booked holidays</string>
    <string name="cancel">Cancel</string>
    <string name="edit_holiday_request">Edit Holiday Request</string>
</resources>