<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/statusText"
        android:layout_width="wrap_content"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:text="@string/status_pending" />

    <TextView
        android:id="@+id/datesText"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dates" />

    <TextView
        android:id="@+id/daysText"
        android:textSize="17sp"
        android:textColor="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/days" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:backgroundTint="#B5E5FB"
            android:text="@string/edit" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textStyle="bold"
            android:backgroundTint="#DB3030"
            android:layout_marginStart="8dp" />
    </LinearLayout>
</LinearLayout>
